fix: show individual SQL batch results and avoid terminal error prompts